--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Karla:wght@600&family=Lobster&family=Poppins:wght@500;600&display=swap');
+
+
+* {
+  box-sizing: border-box;
+  font-family: 'Dancing Script', cursive;
+  font-family: 'Karla', sans-serif;
+  font-family: 'Lobster', cursive;
+  font-family: 'Poppins', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  justify-content: center;
+  align-items: center;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.13);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  width: 100px;
+  height: 100px;
+}
+
+.heading {
+  text-align: center;
+  font-size: 2rem;
+  margin: 20px 0;
+}
+
+.reset {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.reset button {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.reset button:hover {
+  /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.13);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
 }
