--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Lobster', cursive;
   font-family: 'Dancing Script', cursive;
   font-family: 'Karla', sans-serif;
-  font-family: 'Lobster', cursive;
   font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 .App {
@@ -25,12 +26,12 @@
   height: 300px;
   display: flex;
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(255, 255, 255, 0.08);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(4.8px);
+  -webkit-backdrop-filter: blur(4.8px);
+  border: 1px solid rgba(255, 255, 255, 0.21);
 }
 
 .square {
@@ -64,8 +65,8 @@
 
 .reset button:hover {
   /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.13);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
 }
